--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ services:
   - docker
 
 script:
-  - pip install gitchangelog
+  - pip install gitchangelog --user -U pip
   - echo 'Running changelog generator test'
