--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ services:
 
 script:
   - gem install github_changelog_generator
+  - github_changelog_generator -u yildiz-online -p test-changelog
   - echo 'Running changelog generator test'
